--- a/css/fontello/css/fontello.css
+++ b/css/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?85626323');
-  src: url('../font/fontello.eot?85626323#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?85626323') format('woff2'),
-       url('../font/fontello.woff?85626323') format('woff'),
-       url('../font/fontello.ttf?85626323') format('truetype'),
-       url('../font/fontello.svg?85626323#fontello') format('svg');
+  src: url('../font/fontello.eot?8951640');
+  src: url('../font/fontello.eot?8951640#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?8951640') format('woff2'),
+       url('../font/fontello.woff?8951640') format('woff'),
+       url('../font/fontello.ttf?8951640') format('truetype'),
+       url('../font/fontello.svg?8951640#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?85626323#fontello') format('svg');
+    src: url('../font/fontello.svg?8951640#fontello') format('svg');
   }
 }
 */
@@ -67,8 +67,12 @@
 .icon-right-open-big:before { content: '\e80a'; } /* '' */
 .icon-left-open-big:before { content: '\e80b'; } /* '' */
 .icon-play:before { content: '\e80c'; } /* '' */
+.icon-right-open-mini:before { content: '\e80d'; } /* '' */
+.icon-th:before { content: '\e80e'; } /* '' */
 .icon-facebook-circled:before { content: '\f051'; } /* '' */
+.icon-thumbs-up-alt:before { content: '\f164'; } /* '' */
 .icon-youtube:before { content: '\f167'; } /* '' */
+.icon-youtube-play:before { content: '\f16a'; } /* '' */
 .icon-instagram-1:before { content: '\f16d'; } /* '' */
 .icon-map:before { content: '\f279'; } /* '' */
 .icon-shopping-bag:before { content: '\f290'; } /* '' */
