--- a/css/fontello/css/fontello-codes.css
+++ b/css/fontello/css/fontello-codes.css
@@ -14,6 +14,7 @@
 .icon-play:before { content: '\e80c'; } /* '' */
 .icon-right-open-mini:before { content: '\e80d'; } /* '' */
 .icon-th:before { content: '\e80e'; } /* '' */
+.icon-up-dir:before { content: '\e80f'; } /* '' */
 .icon-facebook-circled:before { content: '\f051'; } /* '' */
 .icon-thumbs-up-alt:before { content: '\f164'; } /* '' */
 .icon-youtube:before { content: '\f167'; } /* '' */
