--- a/css/fontello/css/fontello.css
+++ b/css/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?8951640');
-  src: url('../font/fontello.eot?8951640#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?8951640') format('woff2'),
-       url('../font/fontello.woff?8951640') format('woff'),
-       url('../font/fontello.ttf?8951640') format('truetype'),
-       url('../font/fontello.svg?8951640#fontello') format('svg');
+  src: url('../font/fontello.eot?42287016');
+  src: url('../font/fontello.eot?42287016#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?42287016') format('woff2'),
+       url('../font/fontello.woff?42287016') format('woff'),
+       url('../font/fontello.ttf?42287016') format('truetype'),
+       url('../font/fontello.svg?42287016#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?8951640#fontello') format('svg');
+    src: url('../font/fontello.svg?42287016#fontello') format('svg');
   }
 }
 */
@@ -69,6 +69,7 @@
 .icon-play:before { content: '\e80c'; } /* '' */
 .icon-right-open-mini:before { content: '\e80d'; } /* '' */
 .icon-th:before { content: '\e80e'; } /* '' */
+.icon-up-dir:before { content: '\e80f'; } /* '' */
 .icon-facebook-circled:before { content: '\f051'; } /* '' */
 .icon-thumbs-up-alt:before { content: '\f164'; } /* '' */
 .icon-youtube:before { content: '\f167'; } /* '' */
