--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ body {
 .icon-heart:hover {
   color: rgba(255, 0, 0, .8);
 }
-.gnb__sub .icon-heart:hover{
+.gnb-sub .icon-heart:hover{
   color: rgba(255, 255, 255, .8);
 }
 
@@ -180,19 +180,16 @@ body {
   justify-content: space-between;
   width: 1015px;
 }
-
 .gnb-main>li {
   position: relative;
   display: inline-block;
   height: 100%;
 }
-
 .gnb-main>li>a {
   display: block;
   padding: 25px 10px;
   color: rgba(255, 255, 255, .8);
 }
-
 .gnb-main>li::after {
   content: '';
   position: absolute;
@@ -201,23 +198,20 @@ body {
   width: 80%;
   height: 5px;
   border-radius: 20px;
-
   transform: scaleY(0);
   background: rgb(53, 53, 255);
 }
-
 .gnb-main>li:hover::after {
   transform: scaleY(1);
   transition: transform .5s;
 }
-
 /* gnb sub */
-.gnb__sub {
+.gnb-sub {
   position: relative;
   display: flex;
   align-items: center;
 }
-.gnb__sub-liked {
+.gnb-sub-liked {
   display: block;
   width: 25px;
   height: 18px;
@@ -225,25 +219,21 @@ body {
   font-weight: lighter;
   color: white;
 }
-.gnb__sub>li button {
+.gnb-sub>li button {
   height: 3.5rem;
   padding: 0 1.5rem;
   margin-left: .5rem;
   font-size: 1.0rem;
   color: rgba(255, 255, 255, .8);
 }
-
-.gnb__sub-search {
+.gnb-sub-search {
   background: #504D56;
 }
-.gnb__sub-search-active,
-.gnb__sub-search:hover {
+.gnb-sub-search-active,
+.gnb-sub-search:hover {
   background: rgba(93, 88, 245, 1);
   transition: background .3s;
 }
-/* .icon-search {
-  font-weight: lighter;
-} */
 .search-wrap{
   position: absolute;
   top: 85%;
@@ -296,18 +286,16 @@ body {
   border: none;
   background: none;
   cursor: pointer;
-
   display: none;
 }
-.gnb__sub-site-map {
+.gnb-sub-site-map {
   background: #2F353D;
 }
-.gnb__sub__button-focused,
-.gnb__sub-site-map:hover {
+.gnb-sub-button-focused,
+.gnb-sub-site-map:hover {
   background: rgba(89, 61, 155, 1);
   transition: background .3s;
 }
-
 .icon-map {
   padding-left: 1em;
 }
@@ -318,41 +306,37 @@ body {
   background: rgba(255, 255, 255, 1);
   box-shadow: 0px 3px 6px 1px rgba(0, 0, 0, .1);
   z-index: 9;
-
   display: none;
 }
 /* depth2 menus */
 .depth2-menus{
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   align-items: flex-start;
   align-content: space-around;
-  /* height: 60rem; */
 }
-.depth2-menus .mns-box{
-  width: 18%;
-  /* padding-bottom: 1.5em; */
-  padding: 0 .5em;
+.depth2-menus .menus-box{
+  width: 20rem;
   margin: 1em 0em 2em 0em;
-  /* border-right: 1px solid rgba(0, 0, 0, .1); */
   list-style: georgian inside;
 }
-.mns-box li::before{
+.menus-box li::before{
   content: '>> ';
   font-size: 1.0rem;
 }
-.mns-box em{
+.menus-box em{
   display: block;
   padding: 1em 0 3em 0;
   color: rgb(53, 53, 255);
 }
-.mns-box li a{
+.menus-box li a{
   display: inline-block;
-  padding-left: 1em;
+  padding-left: .5em;
   padding-bottom: 1.2em;
   font-size: 1.1rem;
 }
-.mns-link-all{
+.menus-link-all{
   display: inline-block;
   padding-top: 2em;
   font-size: 1.2rem;
@@ -378,6 +362,20 @@ body {
 
   color: white;
   background: rgb(104, 104, 242);
+}
+@media screen and (max-width:1024px) {
+  .menus-box .--box-c{
+    /* display: none; */
+  }
+  .depth2-buttons button{
+    /* width: 100%; */
+    width: 50%;
+  }
+  .more-box a{
+    display: block;
+    height: 40%;
+  }
+  
 }
 /* depth2-more */
 .depth2-more{
@@ -1417,7 +1415,7 @@ address {
     object-fit: cover;
   }
 
-  .gnb__sub>li>button>.-txt {
+  .gnb-sub>li>button>.-txt {
     display: none;
   }
 
